Bug 134816 - Crash using Styles Inspector with paragraph styles that don't inherit from Default Paragraph Style
Summary: Crash using Styles Inspector with paragraph styles that don't inherit from De...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: Style-Inspector
  Show dependency treegraph
 
Reported: 2020-07-15 07:16 UTC by Mike Kaganski
Modified: 2020-07-15 15:07 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2020-07-15 07:16:14 UTC
1. Create a paragraph style that does not inherit (neither directly, or indirectly) from Default Paragraph Style - use "- None -" in its "Inherits from" on Organizer tab.
2. Apply this style to a text.
3. Use Styles Inspector on the text

=> crash.
Comment 1 Heiko Tietze 2020-07-15 09:02:02 UTC
/confirmed

Version: 7.1.0.0.alpha0+
Build ID: Don't eat the yellow snow
CPU threads: 8; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: de-DE (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 2 Commit Notification 2020-07-15 13:46:54 UTC
Shivam Kumar Singh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8f121c1a9d5583e187f5468fc197c92e4c019f16

tdf#134816 Crash when using a parentless style other than DPS

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.