tdf#134816 Crash when using a parentless style other than DPS

Change-Id: I2da764a50c7018eb28a63dd47c2c4e2c2975bdb1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/98816
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins